--- a/loginApp/package.json
+++ b/loginApp/package.json
@@ -12,17 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-session": "^1.17.3",
     "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3",
-    "rate-limiter-flexible": "^2.3.8",
-    "redis": "^4.2.0"
+    "rate-limiter-flexible": "^2.3.8"
   }
 }
